# akaze-rust

./: .gitignore  Cargo.toml  LICENSE.md  README.md
akaze/: Cargo.toml
akaze-util/: Cargo.toml  README.md
akaze-util/src/: lib.rs
akaze/src/: lib.rs
akaze/src/ops/: contrast_factor.rs  derivatives.rs  estimate_fundamental_matrix.rs  feature_matching.rs  fed_tau.rs  mod.rs  nonlinear_diffusion.rs  scale_space_extrema.rs
akaze/src/types/: evolution.rs  feature_match.rs  image.rs  keypoint.rs
akaze/tests/: integration-test.rs
src/: lib.rs
src/ops/: contrast_factor.rs  derivatives.rs  descriptors.rs  detector_response.rs  estimate_fundamental_matrix.rs  feature_matching.rs  fed_tau.rs  mod.rs  nonlinear_diffusion.rs  scale_space_extrema.rs
src/types/: evolution.rs  feature_match.rs  image.rs  keypoint.rs  mod.rs
test-data/: README.md
tests/: integration-test.rs
