[package]
name = "akaze"
version = "0.1.2"
edition = "2018"
authors = ["John Stalbaum <indianajohn@github>"]
description = "A Rust implementation of the A-KAZE algorithm."
homepage = "https://github.com/indianajohn/akaze-rust/"
repository = "https://github.com/indianajohn/akaze-rust/"
readme = "README.md"
keywords = ["CV", "vision", "sfm", "features", "descriptors"]
categories = ["science::robotics", "multimedia::images"]
license = "MIT"


[dependencies]
image = "0.20.0"
log = "0.4.5"
env_logger = "0.5.13"
rustfmt = "0.10.0"
primal = "0.2.3"
time = "0.1.40"
num_cpus = "1.8.0"
scoped_threadpool = "0.1.9"
random = "0.12.2"
serde = "1.0.79"
serde_json = "1.0.31"
serde_cbor = "0.9.0"
serde_derive = "1.0.79"
tempdir = "0.3.7"
nalgebra = "0.16.4"
clap = "2.32.0"

[profile.release]
codegen-units = 1

[dev-dependencies]
approx = "0.3.1"
