[package]
name = "akaze-util"
version = "0.1.0"
authors = ["vax <vadixidav@gmail.com>"]
edition = "2018"

[dependencies]
akaze = { version = "0.1.2", path = "../akaze" }
clap = "2.33.0"
image = "0.21.1"
serde = { version = "1.0.90", features = ["derive"] }
serde_json = "1.0.39"
log = "0.4.6"
env_logger = "0.6.1"
bincode = "1.1.3"
failure = "0.1.5"

