[package]
name = "akaze"
version = "0.1.2"
edition = "2018"
authors = ["John Stalbaum <indianajohn@github>"]
description = "A Rust implementation of the A-KAZE algorithm."
homepage = "https://github.com/indianajohn/akaze-rust/"
repository = "https://github.com/indianajohn/akaze-rust/"
readme = "README.md"
keywords = ["CV", "vision", "sfm", "features", "descriptors"]
categories = ["science::robotics", "multimedia::images"]
license = "MIT"

[dependencies]
image = { version = "0.21.1", default-features = false, features = ["jpeg", "png_codec", "webp", "jpeg_rayon"] }
log = { version = "0.4.5", default-features = false }
primal = { version = "0.2.3", default-features = false }
time = { version = "0.1.40", default-features = false }
num_cpus = { version = "1.8.0", default-features = false }
scoped_threadpool = { version = "0.1.9", default-features = false }
random = { version = "0.12.2", default-features = false }
serde = { version = "1.0.79", default-features = false, features = ["std", "derive"]}
nalgebra = { version = "0.16.4", default-features = false, features = ["std", "alloc"] }
bitflags = "=1.0.4"

[dev-dependencies]
env_logger = { version = "0.5.13", default-features = false }
approx = "0.3.1"
